--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^1.3.1",
-    "gulp-sass": "^4.1.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-sass": "^5.0.0",
+    "gulp-uglify": "^3.0.2",
+    "jshint": "^2.13.0",
+    "sass": "^1.35.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -35,7 +38,6 @@
     "@babel/plugin-proposal-pipeline-operator": "^7.12.13",
     "@babel/plugin-transform-runtime": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
-    "@babel/runtime": "^7.14.0",
-    "gulp-babel": "^8.0.0"
+    "@babel/runtime": "^7.14.0"
   }
 }
